2009-10-29  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10553]
	* malloc/malloc.c (malloc_info): Fix typos in format strings.
	Patch by John Sullivan <jsrhbz@kanargh.force9.co.uk>.

	[BZ #10564]
	* login/utmp_file.c (TIMEOUT): Increase to 10.

	[BZ #10609]
	* sysdeps/unix/sysv/linux/faccessat.c: Fix handling of empty parameters
	for file names in case the syscall is not available.
	* sysdeps/unix/sysv/linux/fchmodat.c: Likewise.
	* sysdeps/unix/sysv/linux/fchownat.c: Likewise.
	* sysdeps/unix/sysv/linux/futimesat.c: Likewise.
	* sysdeps/unix/sysv/linux/fxstatat.c: Likewise.
	* sysdeps/unix/sysv/linux/fxstatat64.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/fchownat.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/fxstatat.c: Likewise.
	* sysdeps/unix/sysv/linux/linkat.c: Likewise.
	* sysdeps/unix/sysv/linux/mkdirat.c: Likewise.
	* sysdeps/unix/sysv/linux/openat.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/fchownat.c: Likewise.
	* sysdeps/unix/sysv/linux/readlinkat.c: Likewise.
	* sysdeps/unix/sysv/linux/renameat.c: Likewise.
	* sysdeps/unix/sysv/linux/symlinkat.c: Likewise.
	* sysdeps/unix/sysv/linux/unlinkat.c: Likewise.
	* sysdeps/unix/sysv/linux/wordsize-64/fxstatat.c: Likewise.
	* sysdeps/unix/sysv/linux/xmknodat.c: Likewise.

	[BZ #10643]
	* sysdeps/pthread/aio_misc.c (__aio_enqueue_request): If thread
	creation filed, remove the request from the 'requests' list and signal
	the caller that the request is finished.

	[BZ #10692]
	* nis/nss_nis/nis-grp.c (internal_nis_getgrent_r): Don't free buffer
	in error if batch_read.  Patch by Joe Landers <jlanders@vmware.com>.

	[BZ #10713]
	* nis/nss_nis/nis-grp.c (internal_nis_endgrent): Start freeing blocks
	from intern.start.  Patch by Joe Landers <jlanders@vmware.com>.

	[BZ #10780]
	* libio/ioputs.c (_IO_puts): Make sure to not return a number which
	overflows the int return type.

	[BZ #10717]
	* malloc/memusagestat.c (main): Fix repairing of trace files.  We also